--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html lang="en">
     <head>
         <title>Search</title>
+        
+        <style>
+            
+        </style>
     </head>
     <body>
         <form action="https://google.com/search">
-            <input type="text" name="q">
-            <input type="submit" value="Google Search">
+            <input class="textarea" type="text" name="q">
+            <input class="button" type="submit" value="Google Search">
         </form>
     </body>
 </html>
