--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
     <head>
         <title>Search</title>
-        
         <style>
-            
+            .textarea {
+              width: 700px;
+              height: 30px;
+              border-radius: 50%;
+            }
         </style>
     </head>
     <body>
