--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             margin: 0;
           }
           .textarea {
-            min-width: 500px;
+            min-width: 485px;
             padding: 12px;
             border-radius: 50px;
             border: 1px solid lightgray;
@@ -18,6 +18,7 @@
           .textarea:hover, .button:hover {
             -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.25);
             box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.25);
+            transition-duration: 0.1s;
           }
           .button {
             padding: 10px;
@@ -43,8 +44,8 @@
             <form action="https://google.com/search">
                 <input class="textarea" type="text" name="q" placeholder="🔍">
                 <p>
-                <input class="button" type="submit" value="Google Search">
-                <input class="button" type="button" value="I'm Feeling Lucky" onclick="location.href='https://www.google.com/doodles'">
+                <input type="submit" name="btnK" value="Google Search" class="button">
+                <input type="submit" name="btnI" value="I am Feeling Lucky" class="button">
             </form>
         </center>
         </div>
